tests/baselines/reference/isolatedModulesNoExternalModule.errors.txt
tests/cases/compiler/file1.ts(1,1): error TS1208: Cannot compile namespaces when the '--isolatedModules' flag is provided.


==== tests/cases/compiler/file1.ts (1 errors) ====
    var x;
    ~~~
!!! error TS1208: Cannot compile namespaces when the '--isolatedModules' flag is provided.